--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-scripts": "2.1.2",
     "react-select": "^2.2.0",
     "react-text-mask": "^5.4.3",
+    "react-toastify": "^4.5.2",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-form-input-masks": "^1.3.0",
     "redux-thunk": "^2.3.0",
     "text-mask-addons": "^3.8.0"
   },
